--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "cookie-parser": "^1.4.6"
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "react-redux": "^9.0.4",
+    "redux": "^5.0.0"
   }
 }
