--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
