--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.8",
     "react-redux": "^9.0.4",
     "redux": "^5.0.0"
   }
